--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,7 @@
    </head>
    <body>
      <ul>
-       {% for item in items %}
-         <li>{{ escape(item) }}</li>
-       {% end %}
+         <li>{{ current_user }}</li>
      </ul>
    </body>
  </html>
