--- a/static/login.html
+++ b/static/login.html
@@ -11,7 +11,7 @@
         <form method="post">
             <input type="text" required="required" placeholder="用户名" name="username"></input>
             <input type="password" required="required" placeholder="密码" name="pwd"></input>
-            {{ xsrf_form_html() }}
+            {% module xsrf_form_html() %}
             <button class="but" type="submit">登录</button>
         </form>
     </div>
