update the page framework

--- a/static/main.html
+++ b/static/main.html
@@ -24,7 +24,7 @@
 <div class="main">
     <div class="nav2" id="left">
     </div>
-    <div class="console">
+    <div class="console" id="content">
     </div>
 </div>
 </body>
