--- a/static/html/数据管理.html
+++ b/static/html/数据管理.html
@@ -1,3 +1,4 @@
+<!--
 <html>
 <head>
 <title>数据管理</title>
@@ -5,15 +6,13 @@
 <link rel="Stylesheet" type="text/css" href="css/css-all.css" />
 </head>
 <body>
-        <table class="dMrightNav">
-            <tr class="dMrow"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">全部文件</td></tr>
+-->
+        <table class="dMrightNav" id="leftMenu">
+            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">全部文件</td></tr>
             <tr class="dMrow"><td class="dMcol0"><img src="./images/pic.png" class="dMimg"/ ></td><td class="dMcol1">图像文件</td></tr>
             <tr class="dMrow"><td class="dMcol0"><img src="./images/video.png" class="dMimg"/></td><td class="dMcol1">视频文件</td></tr>
         </table>
-        <!-- <ul>
-            <li><button>全部文件</button></li>
-            <li><button>图片文件</button></li>
-            <li><button>视频文件</button></li>
-        </ul> -->
+<!--
 </body>
 </html>
+-->
