--- a/static/main.html
+++ b/static/main.html
@@ -17,7 +17,14 @@
 			<td align="center" class=acontainer><a onclick="navigate($(this))" id="dataManagement" class="dataManagement">数据管理</a></td>
 			<td align="center" class=acontainer><a onclick="navigate($(this))" id="taskManagement" class="dataManagement">任务管理</a></td>
 			<td align="center" class=acontainer><a onclick="navigate($(this))" id="userManagement" class="dataManagement">用户管理</a></td>
-			<td align="center" class="settings"><img src="./images/account.png"/><p>张三</p><img src="./images/set.png" onclick="" onmouseover="this.style.cursor='hand';"/></td>
+			<td align="center" class="settings">
+                <img src="./images/account.png"/>
+                <p>张三</p>
+                <img src="./images/set.png" onclick="" onmouseover="this.style.cursor='hand';"/>
+            </td>
+            <td>
+                <p><a href="/logout">登出</a></p>
+            </td>
 		</tr> 
 	</table>
 </div>
