--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,7 @@
 <html>
         <head>
 		<meta charset="utf-8" /> 
-        <link rel="stylesheet" href="public/css/login.css" type="text/css" />
+        <link rel="stylesheet" href="css/login.css" type="text/css" />
         <title>登陆</title>
         </head>
         <body>
