--- a/static/html/查看及校验.html
+++ b/static/html/查看及校验.html
@@ -11,7 +11,9 @@
             <tr><td class="row0"><img src="./images/process.png"/></td><td class="row1">运行中</td></tr>
             <tr><td class="row0"><img src="./images/history.png"/></td><td class="row1">待审核</td></tr>
         </table> -->
-        <h>结果列表</h>
+        <table class="dMrightNav" id="leftMenu">
+            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">结果列表</td></tr>
+        </table>
         <div id="JD_resultList"></div>
 </body>
 </html>
