--- a/static/html/userEdit-console.html
+++ b/static/html/userEdit-console.html
@@ -1,43 +1,37 @@
-<html>
+<!--<html>
 <head>
 <meta charset="utf-8" /> 
 <title>用户修改</title>
 <link rel="Stylesheet" type="text/css" href="css/css-all.css" />
 </head>
 <body>
-		<div class="UE_config"><p>用户4配置</p></div>
-		<div class="UE_setting_passwd">
-			<form>
-				<div class="UE_changing_passwd"><p>密码修改</p></div>
-				<div class="UE_filling_passwd">
-					<p>新密码：	<input type="text" name="new_passwd"></p>
-					<p>再次输入：<input type="text" name="new_passwd_again"></p>
-					<input type="submit" value="确定" />
-				</div>
-			</form>
-		</div>
-	
+-->
 		<div class="UE_authority_setting">
-			<div class="UE_authority_changing"><p>权限设置</p></div>
-			<div class="UE_headings">
-				<label id="UE_data_dir">数据目录</label>
-				<label id="UE_read_authority">读权限</label>
-				<label id="UE_write_authority">写权限</label>
-			</div>
+			<p id="edit_users" style="margin-left: 50; font-size: 120%"></p>
 			<div class="UE_fileList">
                 <table class="UE_permissiontable" border='1'>
-                    <tr class="UE_permissiontable_tr"><th><input type="checkbox"><label>全选</label></th><th>文件名或文件夹名</th><th>文件大小</th><th>修改日期</th></tr>
-                    <tr class="UE_permissiontable_tr"><td><input type="checkbox"></td><td>/全部文件/张三/春季巡检/上嘉一线</td><td>255</td><td>2018年1月13日</td></tr>
-                    <tr class="UE_permissiontable_tr"><td><input type="checkbox"></td><td>/全部文件/张三/春季巡检/上嘉一线</td><td>255</td><td>2018年1月13日</td></tr>
-                    <tr class="UE_permissiontable_tr"><td><input type="checkbox"></td><td>/全部文件/张三/春季巡检/上嘉一线</td><td>255</td><td>2018年1月13日</td></tr>
-                    <tr class="UE_permissiontable_tr"><td><input type="checkbox"></td><td>/全部文件/张三/春季巡检/上嘉一线</td><td>255</td><td>2018年1月13日</td></tr>
-                <table>
-            </div>
+                    <tr class="UE_permissiontable_tr"><th>文件名或文件夹名</th><th><input type="checkbox" onclick="">读权限</th><th><input type="checkbox" onclick="">写权限</th></tr>
+                    <tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+                    <tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+                    <tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
+				</table>
+			</div>
+			<div style="float: left;width: 95%;height: 10%;margin-top: 1%;	margin-left: 2%;">
+				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 2%;font-size: 100%;" class="uAchkBox_class" value="Manager"/>拥有管理权限
+				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="All R/W"/>拥有全部文件读权限
+				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="Task Manager"/>拥有任务管理权限
+			</div>
+
+			<div>
+				<button style="margin-left: 87%;margin-top: 1%" class="UE_button">修改</button>
+		    </div>
         </div>
-        <div>
-            <input id="UE_coverall" type="checkbox"/><label>覆盖用户组内所有用户的权限</label>
-            <button>保存</button>
-        </div>
-   
+		
+<!-- 
 </body>
 </html>
+-->
