--- a/static/html/用户管理.html
+++ b/static/html/用户管理.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 -->
-        <table class="dMrightNav" id="leftMenu">
+        <table class="UM_rightNav" id="leftMenu">
             <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">管理员权限</td></tr>
         </table>
 <!--
