--- a/static/html/用户管理.html
+++ b/static/html/用户管理.html
@@ -8,7 +8,7 @@
 <body>
 -->
         <table class="UM_rightNav" id="leftMenu">
-            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">管理员权限</td></tr>
+            <tr class="dMrow" onclick="request_userlist()"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">管理员权限</td></tr>
         </table>
 <!--
 </body>
