--- a/static/html/userEdit-console.html
+++ b/static/html/userEdit-console.html
@@ -9,7 +9,7 @@
 		<div class="UE_authority_setting">
 			<p id="edit_users" style="margin-left: 50; font-size: 120%"></p>
 			<div class="UE_fileList">
-                <table class="UE_permissiontable" border='1'>
+                <!--table class="UE_permissiontable" border='1'>
                     <tr class="UE_permissiontable_tr"><th>文件名或文件夹名</th><th><input type="checkbox" onclick="">读权限</th><th><input type="checkbox" onclick="">写权限</th></tr>
                     <tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
                     <tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
@@ -18,7 +18,7 @@
 					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
 					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
 					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
-				</table>
+				</table-->
 			</div>
 			<div style="float: left;width: 95%;height: 10%;margin-top: 1%;	margin-left: 2%;">
 				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 2%;font-size: 100%;" class="uAchkBox_class" value="Manager"/>拥有管理权限
