--- a/static/html/用户管理-管理员权限.html
+++ b/static/html/用户管理-管理员权限.html
@@ -13,7 +13,7 @@
         <div id="dMsearch"><button id="dMsearchbtn">搜索</button><input id="dMsrchPrintbox"type="text"/></div>
         </div>
         <div class="UM_userList">
-        <table class="UM_userlisttable" border='1'>
+        <!--table class="UM_userlisttable" border='1'>
             <tr class="UM_ulistrow"><th><input type="checkbox" id="CheckAll" onclick="Se_DE_Alluser($(this))"><label>全选</label></th><th>用户名</th><th></th><th>拥有管理权限</th><th>拥有全部文件读权限</th><th>拥有任务管理权限</th><th>创建用户目录</th></tr>
             <tr class="UM_ulistrow"><td><input class="chkBox_0" type="checkbox" ></td><td>zhangsan</td><td><button class="UM_ulistbtn" onclick="changepasswd($(this))">修改密码</button></td>
                 <td><input type="checkbox" id="chkBox_1" value="Manager"/></td>
@@ -75,7 +75,7 @@
                 <td><input type="checkbox" id="chkBox_3" value="Task Manager"/></td>
                 <td><input type="checkbox" id="chkBox_4" checked="checked" value="Create Dir"/></td>
             </tr>
-        </table>
+        </table-->
         </div>
     </div>
 <!--/body>
