--- a/static/main.html
+++ b/static/main.html
@@ -5,6 +5,7 @@
 <link rel="Stylesheet" type="text/css" href="./css/css-all.css" />
 <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="./js/yoda.js"></script>
+<script type="text/javascript" src="./js/yoda-judgement.js"></script>
 </head>
 <body onload="$('#dataManagement').click()">
 <div class="header">
