--- a/static/html/userEdit-console.html
+++ b/static/html/userEdit-console.html
@@ -22,7 +22,7 @@
 			</div>
 			<div style="float: left;width: 95%;height: 10%;margin-top: 1%;	margin-left: 2%;">
 				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 2%;font-size: 100%;" class="uAchkBox_class" value="Manager"/>拥有管理权限
-				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="All R/W"/>拥有全部文件读权限
+				<input type="checkbox" onclick="Se_DE_All($(this),'AllRead_chk')" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="All R/W"/>拥有全部文件读权限
 				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="Task Manager"/>拥有任务管理权限
 			</div>
 
