--- a/static/main.html
+++ b/static/main.html
@@ -19,8 +19,8 @@
 			<td align="center" class=acontainer><a onclick="navigate($(this))" id="userManagement" class="dataManagement">用户管理</a></td>
 			<td align="center" class="settings">
                 <img src="./images/account.png"/>
-                <p>张三</p>
-                <img src="./images/set.png" onclick="" onmouseover="this.style.cursor='hand';"/>
+                <p id="userid">张三</p>
+                <img src="./images/set.png" onclick="navigate($('#selfsetting'))" onmouseover="this.style.cursor='hand';"/><label id="selfsetting" hidden>个人设置</label>
             </td>
             <td>
                 <p><a href="/logout">登出</a></p>
