--- a/static/html/userEdit-console.html
+++ b/static/html/userEdit-console.html
@@ -27,7 +27,7 @@
 			</div>
 
 			<div>
-				<button style="margin-left: 87%;margin-top: 1%" class="UE_button">修改</button>
+				<button style="margin-left: 87%;margin-top: 1%" class="UE_button" onclick="edituser_do()">修改</button>
 		    </div>
         </div>
 		
