--- a/static/html/userEdit-console.html
+++ b/static/html/userEdit-console.html
@@ -20,15 +20,20 @@
 					<tr class="UE_permissiontable_tr"><td>/全部文件/张三/春季巡检/上嘉一线</td><td><input type="checkbox" class="reading"></td><td><input type="checkbox" class="writing"></td></tr>
 				</table-->
 			</div>
-			<div style="float: left;width: 95%;height: 10%;margin-top: 1%;	margin-left: 2%;">
+			<div>
+				<button style="margin-left: 87%;margin-top: 1%" class="UE_button" onclick="edituser_do1()">修改</button>
+		    </div>
+			<div style="border: solid 1px hsl(174, 29%, 64%); float: left;width: 95%;height: 8%;margin-top: 1%;	margin-left: 2%;">
 				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 2%;font-size: 100%;" class="uAchkBox_class" value="Manager"/>拥有管理权限
 				<input type="checkbox" onclick="Se_DE_All($(this),'AllRead_chk')" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="All R/W"/>拥有全部文件读权限
 				<input type="checkbox" style="height:20%;width: 2%;margin-top:2%;margin-left: 3%;font-size: 100%;" class="uAchkBox_class" value="Task Manager"/>拥有任务管理权限
 			</div>
-
 			<div>
-				<button style="margin-left: 87%;margin-top: 1%" class="UE_button" onclick="edituser_do()">修改</button>
-		    </div>
+				<button style="margin-left: 87%;margin-top: 1%" class="UE_button" onclick="edituser_do2()">修改</button>
+			</div>
+			
+
+			
         </div>
 		
 <!-- 
