--- a/static/html/用户管理-管理员权限.html
+++ b/static/html/用户管理-管理员权限.html
@@ -10,7 +10,7 @@
         <button onclick="adduser($(this))">新增</button>
         <button onclick="deleteuser($(this))">删除</button>
         <button onclick="edituser($(this))">权限修改</button>
-        <div id="dMsearch"><button id="dMsearchbtn" onclick="request_userlist()">搜索</button><input id="dMsrchPrintbox"type="text"/></div>
+        <div id="dMsearch"><button id="dMsearchbtn" onclick="search_userlist()">搜索</button><input id="dMsrchPrintbox"type="text"/></div>
         </div>
         <div class="UM_userList">
         <!--table class="UM_userlisttable" border='1'>
