--- a/static/html/任务管理-全部任务.html
+++ b/static/html/任务管理-全部任务.html
@@ -1,14 +1,14 @@
-<html>
+<!--html>
 <head>
 <title>任务管理</title>
 <meta charset="utf-8" /> 
 <link rel="Stylesheet" type="text/css" href="css/css-all.css" />
 </head>
-<body>
+<body-->
     <div class="TM_manybtn">
         <button>刷新</button>
         <p>当前正在运行任务数：3</p>
-        <button onclick="location.href='./taskCreateEdit-console.html';">新建任务</button>
+        <button onclick="addTask()">新建任务</button>
         <button>删除任务</button>
         <div id="TM_search"><button id="TM_searchbtn">搜索</button><input id="TM_searchbox" type="text"/></div>
     </div>
@@ -47,5 +47,5 @@
         </table>
     </div>
     </div>
-</body>
-</html>
+<!--/body>
+</html-->
