--- a/static/main.html
+++ b/static/main.html
@@ -3,19 +3,22 @@
 <title>输电线路巡视图像（视频）智能分析系统</title>
 <meta charset="utf-8" /> 
 <link rel="Stylesheet" type="text/css" href="./css/css-all.css" />
+<link rel="stylesheet" href="./css/style.min.css" />
 <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="./js/yoda.js"></script>
 <script type="text/javascript" src="./js/yoda-judgement.js"></script>
+<script src="./js/jstree.min.js"></script>
 </head>
 <body onload="$('#dataManagement').click()">
 <div class="header">
     <div class="logo">
     <img id="geirilogo" src="http://www.geiri.sgcc.com.cn/sites/zyyzc/main/images/logo.png"/>
     </div>
-    <div class="prdName"><p>输电线路巡视图像（视频）智能分析系统</p></div>
+    <div class="prdName"><p>输电线路巡视图像（视频）智能分析系统<gaogao
+        /p></div>
 	<table class="nav">
 		<tr>
-			<td align="center" class=acontainer><a onclick="navigate($(this))" id="dataManagement" class="dataManagement">数据管理</a></td>
+			<td align="center" class=acontainer><a onclick="navigate($(this))" id="dataManagement" class="dataManagement">数据管理</as></td>
 			<td align="center" class=acontainer><a onclick="navigate($(this))" id="taskManagement" class="dataManagement">任务管理</a></td>
 			<td align="center" class=acontainer><a onclick="navigate($(this))" id="userManagement" class="dataManagement">用户管理</a></td>
 			<td align="center" class="settings">
@@ -32,8 +35,22 @@
 <div class="main">
     <div class="nav2" id="left">
     </div>
+    
     <div class="console" id="content">
     </div>
+    
 </div>
+<!--script>
+     $("#data").jstree({
+    'core' : {
+        'data' : [
+            { "text" : "Root node", "children" : [
+                    { "text" : "Child node 1" },
+                    { "text" : "Child node 2" }
+            ]}
+        ]
+    }
+});
+</script-->
 </body>
 </html>
