--- a/static/html/任务管理-全部任务.html
+++ b/static/html/任务管理-全部任务.html
@@ -8,7 +8,7 @@
     <div class="TM_manybtn">
         <button>刷新</button>
         <p>当前正在运行任务数：3</p>
-        <button onclick="addTask()">新建任务</button>
+        <button id="_newTask" onclick="taskCreateEdit($(this))">新建任务</button>
         <button>删除任务</button>
         <div id="TM_search"><button id="TM_searchbtn">搜索</button><input id="TM_searchbox" type="text"/></div>
     </div>
@@ -32,7 +32,7 @@
     <div class="TM_fileList">
         <table class="TM_tasklisttable" border='1'>
             <tr class="TM_tasklisttable_tr"><th><input type="checkbox"><label>全选</label></th><th>任务名称</th><th>任务状态</th><th></th><th>输入目录</th><th>图像/视频数量</th><th></th><th></th><th></th></tr>
-            <tr class="TM_tasklisttable_tr"><td><input type="checkbox"></td><td class="TM_tasktablelist_taskname">春季巡检-上嘉一线</td><td>结束</td><td><button>开始</button></td><td class="TM_tasktablelist_path">/home/siyan/yoda-server/data/</td><td>255</td><td><button>编辑</button></td><td><button onclick="startJudgement($(this))">查看及校验</button></td><td><button>报表生成</button></td></tr>
+            <tr class="TM_tasklisttable_tr"><td><input type="checkbox"></td><td class="TM_tasktablelist_taskname">春季巡检-上嘉一线</td><td>结束</td><td><button>开始</button></td><td class="TM_tasktablelist_path">/home/siyan/yoda-server/data/</td><td>255</td><td><button id="_editTask" onclick="taskCreateEdit($(this))"> 编辑</button></td><td><button onclick="startJudgement($(this))">查看及校验</button></td><td><button>报表生成</button></td></tr>
             <tr class="TM_tasklisttable_tr"><td><input type="checkbox"></td><td class="TM_tasktablelist_taskname">春季巡检-上嘉一线</td><td>结束</td><td><button>开始</button></td><td class="TM_tasktablelist_path">全部文件/张三/春季巡检/上嘉一线/</td><td>255</td><td><button>编辑</button></td><td><button onclick="startJudgement($(this))">查看及校验</button></td><td><button>报表生成</button></td></tr>
             <tr class="TM_tasklisttable_tr"><td><input type="checkbox"></td><td class="TM_tasktablelist_taskname">春季巡检-上嘉一线</td><td>结束</td><td><button>开始</button></td><td class="TM_tasktablelist_path">WTF</td><td>255</td><td><button>编辑</button></td><td><button onclick="startJudgement($(this))">查看及校验</button></td><td><button>报表生成</button></td></tr>
             <tr class="TM_tasklisttable_tr"><td><input type="checkbox"></td><td class="TM_tasktablelist_taskname">春季巡检-上嘉一线</td><td>结束</td><td><button>开始</button></td><td class="TM_tasktablelist_path">全部文件/张三/春季巡检/上嘉一线/</td><td>255</td><td><button>编辑</button></td><td><button onclick="startJudgement($(this))">查看及校验</button></td><td><button>报表生成</button></td></tr>
