--- a/static/html/taskCreateEdit-console.html
+++ b/static/html/taskCreateEdit-console.html
@@ -57,8 +57,8 @@
      <div class="TE_usertree">
             <br>
             <div class="TE_div1">拥有操作权限的用户:</div>
-            <div class="TE_div2"></div>
+            <div class="TE_div2_1"></div>
             <br>
             <div class="TE_div1">拥有校验权限的用户:</div>
-            <div class="TE_div2"></div>
+            <div class="TE_div2_2"></div>
     </div>
