download and upload unfinished in datamanagement
download and upload unfinished in datamanagement

--- a/static/html/数据管理-全部文件.html
+++ b/static/html/数据管理-全部文件.html
@@ -16,7 +16,7 @@
         <button onclick="dmBtnClick($(this))">删除</button>
         <button onclick="dmBtnClick($(this))">复制到</button>
         <button onclick="dmBtnClick($(this))">移动到</button>
-        <div id="dMsearch"><button id="dMsearchbtn">搜索</button><input id="dMsrchPrintbox"type="text"/></div>
+        <div id="dMsearch"><button id="dMsearchbtn" onclick="search_filelist();">搜索</button><input id="dMsrchPrintbox"type="text"/></div>
     </div>
 
     <div class="dMdir">
@@ -52,8 +52,15 @@
     <div id="dMbox" style=" width:500px; background: whitesmoke; border:1px solid hsl(174, 29%, 64%); padding:20px; overflow:hidden; display:none;">
         <p id="dMreminder"></p>
         <input id="newFolderName" style="display:block;margin-bottom:15px;width:80%;"type="text">
-        <button id="dMConfirmBtn" style="background:hsl(174, 29%, 64%);border-radius: 5px;border:none;width:55px;height:30px;font-family: Microsoft Yahei;font-size: 100%;" >确定</button>
-        <button id="dMCancelBtn" style="background:hsl(174, 29%, 64%);border-radius: 5px;border:none;width:55px;height:30px;font-family: Microsoft Yahei;font-size: 100%;" >取消</button>
+        <div>   <button id="dMConfirmBtn" style="background:hsl(174, 29%, 64%);border-radius: 5px;border:none;width:55px;height:30px;font-family: Microsoft Yahei;font-size: 100%;" >确定</button>
+                <button id="dMCancelBtn" style="background:hsl(174, 29%, 64%);border-radius: 5px;border:none;width:55px;height:30px;font-family: Microsoft Yahei;font-size: 100%;" >取消</button>
+        </div>
+    </div>
+    <div id="dMPathBox" style=" width:500px; background: whitesmoke; border:1px solid hsl(174, 29%, 64%); padding:20px; overflow:hidden; display:none;">
+        <p id="dMPathreminder"></p>
+        <div>   <button id="dMPathConfirmBtn" style="background:hsl(174, 29%, 64%);border-radius: 5px;border:none;width:55px;height:30px;font-family: Microsoft Yahei;font-size: 100%;" >确定</button>
+                <button id="dMPathCancelBtn" style="background:hsl(174, 29%, 64%);border-radius: 5px;border:none;width:55px;height:30px;font-family: Microsoft Yahei;font-size: 100%;" >取消</button>
+        </div>
     </div>
 
 <!--
