--- a/static/html/查看及校验.html
+++ b/static/html/查看及校验.html
@@ -1,9 +1,9 @@
-<html>
+<!--html>
 <head>
 <title>结果查看及校验</title>
 <link rel="Stylesheet" type="text/css" href="css/css-all.css" />
 </head>
-<body>
+<body-->
         <!-- <table class="rightNav">
             <tr><td class="row0"><img src="./images/form.png"/></td><td class="row1">全部任务</td></tr>
             <tr><td class="row0"><img src="./images/pic.png"/></td><td class="row1">图像分析任务</td></tr>
@@ -15,9 +15,12 @@
             <tr class="jMrow" onclick="generate_JM_FileList($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">结果列表</td></tr>
         </table>
         <div id="JD_resultList">
-            <table id="JM_FileList_Unchecked"><tr><th>未校验</th></tr></table>
+            <div id="validateTree" class="validateTree"></div> 
+            <!--div id="validateTree_1" class="validateTree"></div>
+            <div id="validateTree_2" class="validateTree"></div-->
+            <!--table id="JM_FileList_Unchecked"><tr><th>未校验</th></tr></table>
             <table id="JM_FileList_Correct"><tr><th>已校验-正确</th></tr></table>
-            <table id="JM_FileList_Wrong"><tr><th>已校验-错误</th></tr></table>
+            <table id="JM_FileList_Wrong"><tr><th>已校验-错误</th></tr></table-->
         </div>
-</body>
-</html>
+<!--/body>
+</html-->
