--- a/public/login.html
+++ b/public/login.html
@@ -12,14 +12,16 @@
 <div id=mainBox>
 
 	<div id=div_bg_img></div>
+	<div id=ct_tr1_bg></div>
 
 	<table id=container>
 		<tr class="ct_tr1">
 			<td class=ct_tr1_td1>
 				<div><h1>输电线路巡视图像（视频）智能分析系统</h1>
-					<h3>10倍性能提升，多目标识别，最优性价比</h3>
-					<h3>2666MT/s AVX 512 450万pps</h3>
-					<h3>同配置价格最高下降48%，5年3折</h3>
+					<h3>可实现视频数据实时检测</h3>
+					<h3>覆盖80%以上输电线路巡检故障</h3>
+					<h3>大尺度缺陷识别率大于等于95%</h3>
+					<h3>细粒度缺陷识别率大于等于90%</h3>
 				</div>
 			</td>
 			<td class=ct_tr1_td2>
@@ -37,10 +39,12 @@
 		<tr class=ct_tr2>
 			<td class=ct_tr2_td colspan="2">
 				<table id='switch_box'>
-					<tr>
+					<tr id=sw_box_tr>
 					<td id=sw_box_td><div id=sw_btn_1></div></td>
 					<td id=sw_box_td><div id=sw_btn_2></div></td>
-					<td id=sw_box_td><div id=sw_btn_3>&ensp;</div></td>
+					<td id=sw_box_td><div id=sw_btn_3></div></td>
+					<td id=sw_box_td><div id=sw_btn_4></div></td>
+					<td id=sw_box_td><div id=sw_btn_5>&ensp;</div></td>
 					</tr>
 				</table>
 				<div class="footer">
