--- a/static/html/任务管理.html
+++ b/static/html/任务管理.html
@@ -8,11 +8,11 @@
 <body>
 -->
         <table class="dMrightNav" id="leftMenu">
-            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">全部任务</td></tr>
-            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/pic.png" class="dMimg"/></td><td class="dMcol1">图像分析任务</td></tr>
-            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/video.png" class="dMimg"/></td><td class="dMcol1">视频分析任务</td></tr>
-            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/process.png" class="dMimg"/></td><td class="dMcol1">运行中</td></tr>
-            <tr class="dMrow" onclick="leftNav($(this))"><td class="dMcol0"><img src="./images/history.png" class="dMimg"/></td><td class="dMcol1">待审核</td></tr>
+            <tr class="dMrow" onclick="request_tasklist($(this))"><td class="dMcol0"><img src="./images/form.png" class="dMimg"/></td><td class="dMcol1">全部任务</td></tr>
+            <tr class="dMrow" onclick="request_tasklist($(this))"><td class="dMcol0"><img src="./images/pic.png" class="dMimg"/></td><td class="dMcol1">图像分析任务</td></tr>
+            <tr class="dMrow" onclick="request_tasklist($(this))"><td class="dMcol0"><img src="./images/video.png" class="dMimg"/></td><td class="dMcol1">视频分析任务</td></tr>
+            <tr class="dMrow" onclick="request_tasklist($(this))"><td class="dMcol0"><img src="./images/process.png" class="dMimg"/></td><td class="dMcol1">运行中</td></tr>
+            <tr class="dMrow" onclick="request_tasklist($(this))"><td class="dMcol0"><img src="./images/history.png" class="dMimg"/></td><td class="dMcol1">待审核</td></tr>
         </table>        
 
 <!--
